Update version to 4.25.0, remove 'compromise' dependency from package.json and related configurations, and streamline various components by eliminating unused variables and imports for improved code clarity and performance.

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -3,7 +3,7 @@
 // all pages through the use of the <BaseHead /> component.
 import '../styles/global.css';
 import { SITE_TITLE, SITE_DESCRIPTION, AUTHOR, SEO_CONFIG } from '../consts';
-import { generateMetaTags, DEFAULT_ROBOTS, DEFAULT_LOCALE } from '../utils/seo';
+import { generateMetaTags, DEFAULT_LOCALE } from '../utils/seo';
 import { assetConfig } from '../config/assets';
 
 interface Props {
