--- a/src/components/StructuredData.astro
+++ b/src/components/StructuredData.astro
@@ -14,6 +14,6 @@ const allSchemas = Array.isArray(data)
 
 {
   allSchemas.map((schema) => (
-    <script type="application/ld+json" set:html={JSON.stringify(schema)} />
+    <script type="application/ld+json" is:inline set:html={JSON.stringify(schema)} />
   ))
 }
